Fix word wrapping for file tile in Internet Explorer

--- a/themes/socialbase/components/03-molecules/media/photoswipe-gallery.scss
+++ b/themes/socialbase/components/03-molecules/media/photoswipe-gallery.scss
@@ -24,7 +24,8 @@
   .file-link {
     overflow: hidden;
     margin-bottom: .5rem;
-    word-wrap: anywhere;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 
     a {
       display: block;
